cmake_minimum_required(VERSION 3.19)
project(Compiti_informatica_vacanze_2021)

set(CMAKE_CXX_STANDARD 14)
include_directories(src) 
add_executable(10 10.cpp)
set_target_properties(10 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(11 11.cpp)
set_target_properties(11 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(12 12.cpp)
set_target_properties(12 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(13 13.cpp)
set_target_properties(13 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(14 14.cpp)
set_target_properties(14 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(15 15.cpp)
set_target_properties(15 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(16 16.cpp)
set_target_properties(16 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(17 17.cpp)
set_target_properties(17 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(18 18.cpp)
set_target_properties(18 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(19 19.cpp)
set_target_properties(19 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(20 20.cpp)
set_target_properties(20 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(21 21.cpp)
set_target_properties(21 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(22 22.cpp)
set_target_properties(22 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(23 23.cpp)
set_target_properties(23 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(24 24.cpp)
set_target_properties(24 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(25 25.cpp)
set_target_properties(25 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(26 26.cpp)
set_target_properties(26 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(27 27.cpp)
set_target_properties(27 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(28 28.cpp)
set_target_properties(28 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(29 29.cpp)
set_target_properties(29 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(30 30.cpp)
set_target_properties(30 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(31 31.cpp)
set_target_properties(31 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(32 32.cpp)
set_target_properties(32 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(33 33.cpp)
set_target_properties(33 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(34 34.cpp)
set_target_properties(34 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/") 
add_executable(35 35.cpp)
set_target_properties(35 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/")